@@ -158,9 +158,6 @@ apply from: file('gradle/generation/antlr.gradle')
 
 apply from: file('gradle/datasets/external-datasets.gradle')
 
-// Shared configuration of subprojects containing native code.
-apply from: file('gradle/native/disable-native.gradle')
-
 // Additional development aids.
 apply from: file('gradle/testing/per-project-summary.gradle')
 apply from: file('gradle/testing/slowest-tests-at-end.gradle')
